Fix z-index autocomplete problem on front page

--- a/src/components/Intro/_Intro.less
+++ b/src/components/Intro/_Intro.less
@@ -1,21 +1,14 @@
 .Intro {
   position: relative;
-  overflow: hidden;
 }
 
 .Intro-backgroundImage {
   position: absolute;
-//  min-height: 300px;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
   background-image: url('../images/front.png');
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
   margin: -10px;
 }
 
@@ -29,14 +22,13 @@
 .Intro-promos {
   clear: both;
   position: relative;
-  z-index: 10;
-  margin-left: -30px;
-  margin-right: -30px;
+  margin-left: -40px;
+  margin-right: -40px;
   margin-top: 30px;
 
   &.Panel {
     border-radius: 0;
-    margin-bottom: -30px;
+    margin-bottom: -40px;
   }
 }
 
